refactor(audit): 重构审计事件处理逻辑，优化代码结构